tests/NormalTests/paczka1/fuzzy1/76069214.err
Error in line 5: WLE A791 88,3
Error in line 14: X54lYDKfI A791 65,9
Error in line 7: WLE A718 26,3
Error in line 20: WLE S46 66,5
Error in line 28: S46 A718 5,9
Error in line 26: WLE A791 9,9
Error in line 22: MAR A718 6,1
Error in line 36: okwZM S429 53,4
